--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,10 @@
 }
 
 :root {
-  --color-131921: #131921;
-  --color-3b4149: #3b4149;
+  --color-131921: #1a6f32;
+  --color-3b4149: #7be78c;
   --color-febd69: #febd69;
-  --color-232f3e: #232f3e;
+  --color-232f3e: #217e35;
   --color-bf4800: #bf4800;
   --color-f5f5f7: #f5f5f7;
   --color-ededed: #ededed;
@@ -27,6 +27,10 @@
   background-color: white;
   box-shadow: 0 0 10px #0000001a;
   padding: 15px;
+}
+
+.error {
+  color: red;
 }
 
 body {
