--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
   --color-ededed: #ededed;
   --color-777777: #777777;
   --color-1c1c1b: #1c1c1b;
+  --color-1c1c15: #b5c3c7;
 }
 
 .section-heading {
@@ -34,7 +35,7 @@
 }
 
 body {
-  font-family: "Rubik", sans-serif;
+  font-family: Roboto !important;
 }
 
 a {
@@ -173,7 +174,7 @@ footer .input-group-text {
   font-size: 18px;
   line-height: 28px;
   letter-spacing: 0.4;
-  color: var(--color-131921);
+  color: red;
 }
 
 .small-banner-content {
